# cppx

./: .gitignore  AGENTS.md  CMakeLists.txt  a.cpp  a.out  main.cpp  run
.zed/: debug.json  tasks.json
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  cppx
src/: a.out  bencher.cu  bencher.h  cublas_refs.h  funcs.cpp  funcs.h  header.h  main.cpp
src/tbd/: k0.cu
